<resources>
    <string name="app_name">橙猫</string>
    <string name="home_study">学习</string>
    <string name="home_hot">列表</string>
    <string name="home_dingzhi">定制</string>
    <string name="home_user">我的</string>
    <!---->
    <string name="str_meeting_list">会议列表</string>


    <!--网络数据状态-->
    <string name="str_invalid_data">没有获得数据</string>
    <string name="str_error_data">数据格式异常</string>
    <string name="str_net_error">网络访问异常</string>
    <string name="str_no_net">没有检测到网络连接</string>
    <string name="str_submit_fail">提交数据失败</string>
    <string name="str_no_data">没有获得数据，UI还未提供怎么展示</string>

    <!--首页-->
    <string name="str_train_opt">优选培训</string>
    <string name="str_train_org">培训机构</string>
    <string name="str_train_recent">近期培训</string>
    <string name="str_train_expert">专家介绍</string>
    <string name="str_more_recnet">更多近期培训信息</string>
    <string name="str_more_opt">更多优选培训信息</string>
    <string name="str_area">地区</string>
    <string name="str_style">类型</string>
    <string name="str_period">时段</string>
    <string name="str_recent_start">即将开始</string>
    <string name="str_ended_meeting">过往会议</string>
    <string name="str_get_dingzhi">立即提交，获取专属方案</string>
    <string name="str_def_your_request">请简要描述您的其它需求，如偏好、附件服务等...</string>
    <string name="str_my_profile">我的资料</string>
    <string name="str_my_sign">我的报名</string>
    <string name="str_my_collect">我的收藏</string>
    <string name="str_hotline">客服热线</string>
    <string name="str_collect">收藏</string>
    <string name="str_enroll">立即报名</string>
    <string name="str_meeting_detail">会议详情</string>
    <string name="str_enroll_order">提交订单</string>
    <string name="str_enroll_tips">如有特殊要求，可在此备注，提交订单成功后，专属服务和顾问会和你联系。</string>
    <string name="str_error_phone">请输入正确的手机号</string>
    <string name="str_send_code">验证码发送成功</string>
    <string name="str_input_phone">请输入手机号</string>
    <string name="str_cancel">取消</string>
    <string name="str_confirm">确定</string>


</resources>
