<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:paddingBottom="3dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

    <TextView
        android:id="@+id/txt_title_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:drawablePadding="9dp"
        android:drawableRight="@mipmap/down_error_select"
        android:ellipsize="end"
        android:gravity="center_vertical|left"
        android:lines="1"
        android:textColor="@color/main_text"
        android:text="@string/str_area"
        android:textSize="14dp"
        tools:text="标题"/>

    <TextView
        android:id="@+id/txt_title_topbar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:textColor="@color/main_text"

        android:drawablePadding="9dp"
        android:drawableRight="@mipmap/down_error_select"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:text="@string/str_style"
        android:textSize="14dp"
        tools:text="标题"/>

    <TextView
        android:id="@+id/txt_title_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:textColor="@color/main_text"

        android:drawablePadding="9dp"
        android:drawableRight="@mipmap/down_error_select"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:text="@string/str_period"
        android:textSize="14dp"
        tools:text="标题"/>
</RelativeLayout>