<?xml version="1.0" encoding="utf-8"?>
<com.cysion.train.view.MySmartRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/smr_refresj"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sub_background"
        android:fitsSystemWindows="true"
        tools:context=".activity.SplashActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.cysion.train.view.MyUltranViewPager
                android:id="@+id/vp_home_top"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginLeft="-6dp"
                android:layout_marginRight="-6dp"
                android:layout_marginTop="0dp"></com.cysion.train.view.MyUltranViewPager>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_top_styles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"></android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="2dp"
                android:text="@string/str_train_opt"
                android:textColor="@color/main_text"
                android:textSize="@dimen/header2"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_train_opt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_more_opt"
                style="@style/style_more_train"
                android:text="@string/str_more_opt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="38dp"
                android:text="@string/str_train_org"
                android:textColor="@color/main_text"
                android:textSize="@dimen/header2"
                android:textStyle="bold"/>


            <com.cysion.train.view.HorizontalRecyclerView
                android:id="@+id/rv_train_orgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"></com.cysion.train.view.HorizontalRecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="38dp"
                android:text="@string/str_train_expert"
                android:textColor="@color/main_text"
                android:textSize="@dimen/header2"
                android:textStyle="bold"/>

            <com.cysion.train.view.HorizontalRecyclerView
                android:id="@+id/rv_train_experts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"></com.cysion.train.view.HorizontalRecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="22dp"
                android:text="@string/str_train_recent"
                android:textColor="@color/main_text"
                android:textSize="@dimen/header2"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_train_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_more_recent"
                style="@style/style_more_train"
                android:text="@string/str_more_recnet"/>

            <ImageView
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="38dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/tech_mark"
                android:text="技术支持"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</com.cysion.train.view.MySmartRefreshLayout>
